# telehealth-dashboard

./: Cargo.toml  Project structure.docx  README.md  ~$oject structure.docx
actix_frontend/: Cargo.toml
actix_frontend/src/: main.rs
actix_frontend/static/: index.html  index.js
actix_web_backend/: Cargo.toml
backend/: .env  Cargo.toml
backend/src/: config.rs  main.rs
backend/src/db/: connection.rs  mod.rs  models.rs  queries.rs
backend/src/middleware/: auth_middleware.rs  logging_middleware.rs
backend/src/routes/: appointments.rs  auth.rs  mod.rs  notifications.rs  providers.rs
backend/src/services/: auth_service.rs  mod.rs  notifications_service.rs  provider_service.rs
backend/src/utils/: error_handling.rs  hashing.rs  mod.rs  validation.rs
docs/: Cargo.toml  dummy_data.sql  health_services.db
docs/migrations/: 20241119184734_init.sql  20241120203521_init.sql
docs/src/: find_providers.rs  main.rs
docs/static/: index.html  index.js  login.html  register.html
docs/static/js/: index.js  profile.js  register.js
docs/templates/: index.hbs  login.hbs  profile.hbs  register.hbs
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/public/styles/: main.css
frontend/src/: App.css  app.js
frontend/src/components/: DoctorCard.js  DoctorList.js  Header.js  Map.js  SearchFilters.js
