[package]
name = "telehealth_dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-rt = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
sqlx = { version = "0.6", features = ["runtime-actix-native-tls", "macros", "mssql"] }
chrono = "0.4"
jsonwebtoken = "8.1"
argon2 = "0.4"
uuid = { version = "1.1", features = ["v4"] }
