[package]
name = "docs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
actix-files = "0.6.6"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
urlencoding = "2.1"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-native-tls"] }
handlebars = "6.2.0"
log = "0.4.22"
